<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lk.infinitx.contact.ContactPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tvNearestPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="@string/nearest_persn"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/lvNearestPerson"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvNearestPerson" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/ivTraveller"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/person_image"
                android:maxHeight="@dimen/cast_mini_controller_icon_width"
                android:maxWidth="@dimen/cast_intro_overlay_title_margin_top"
                app:srcCompat="@android:color/holo_green_dark" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ivTraveller"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/ivTraveller"
                android:text="@string/button_confirm"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/button_cancel" />

            <TextView
                android:id="@+id/tvTravellerNIC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_alignTop="@+id/ivTraveller"
                android:layout_toRightOf="@+id/ivTraveller"
                android:layout_toEndOf="@+id/ivTraveller"
                android:layout_marginLeft="67dp"
                android:layout_marginStart="67dp" />

            <TextView
                android:id="@+id/tvTravellerRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="41dp"
                android:layout_marginStart="41dp"
                android:text="TextView"
                android:layout_below="@+id/ivTraveller"
                android:layout_alignLeft="@+id/ivTraveller"
                android:layout_alignStart="@+id/ivTraveller"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/tvTravellerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvTravellerNIC"
                android:layout_alignStart="@+id/tvTravellerNIC"
                android:layout_below="@+id/tvTravellerNIC"
                android:layout_marginTop="21dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvTravellerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvTravellerPhone"
                android:layout_alignStart="@+id/tvTravellerPhone"
                android:layout_below="@+id/tvTravellerPhone"
                android:layout_marginTop="23dp"
                android:text="TextView" />

        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
